--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "dotenv": "^7.0.0",
     "node": "^11.12.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
