--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.2.5",
     "axios": "^0.18.0",
     "dotenv": "^7.0.0",
     "node": "^11.12.0",
